added REST for login/logout, registration work, message alerts, change of forms

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,6 +41,11 @@
     box-shadow: #787474;
     outline: 0;
 }
+#frmReg{
+    margin-left: 5em;
+    margin-right: 5em;
+
+}
 
 #messages{
     background-color: grey;
