--- a/templates/base.html
+++ b/templates/base.html
@@ -56,7 +56,13 @@
         </div>
     </nav>
 
-
+    {% if messages %}
+        {% for message in messages %}
+            <div class="alert alert-{{ message.tags }}">
+                {{ message }}
+            </div>
+        {% endfor %}
+    {% endif %}
     {% block content %}
     {% endblock %}
 
