--- a/templates/register.html
+++ b/templates/register.html
@@ -59,15 +59,15 @@
                 {% endfor %}
 				<div class="mt-4">
 					<div class="d-flex justify-content-center links">
-                        	Already have an account? <a href="{% url 'login' %}" class="ml-2" style="text-decoration: none; color: #ffb3cb">Login</a>
+                        	Already have an account? <a href="{% url 'login' %}" class="ml-2">Login</a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-<footer style="background: 	#ffb3cb;height: 40px; text-align: center; color: black; padding-top: 5px;position: relative; margin-top: 130px">
-       © 2020 Copyright: Pandora
-</footer>
+    <footer>
+       © 2020 Copyright: MAS.com
+    </footer>
 	<script>
 
         const form_fields = document.getElementsByTagName('input');
