api for currencies, models, views, filters, htmls: products.html,profile.html, etc.

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,8 +29,9 @@
           <li class="nav-item active">
             <a class="nav-link" href="{% url 'homepage' %}" style="margin-top: 0.3em">Home </a>
           </li>
+
           <li class="nav-item active">
-            <a class="nav-link" href="#" style="margin-top: 0.3em">Shop </a>
+            <a class="nav-link" href="{% url 'products' %}" style="margin-top: 0.3em">Shop </a>
           </li>
         </ul>
       </div>
