pdf done, changes on database: models, filters,

--- a/templates/home.html
+++ b/templates/home.html
@@ -99,6 +99,6 @@
 </div>
 </div>
 {% endblock %}
-<footer style="background: 	#fde7e9;height: 40px; text-align: center; color: black; padding-top: 5px;position: relative">
-       © 2020 Copyright: Pandora
-</footer>
+{#<footer style="background: 	#fde7e9;height: 40px; text-align: center; color: black; padding-top: 5px;position: relative">#}
+{#       © 2020 Copyright: Pandora#}
+{#</footer>#}
