--- a/static/css/style.css
+++ b/static/css/style.css
@@ -183,3 +183,47 @@ a:hover figcaption { color: #ffb3cb; }
 .pagination-next {
     color: #ffb3cb;
 }
+
+/*product details*/
+.prod_desc{
+    margin-left: 0;
+    /*margin-top:2em;*/
+    padding: 10px 10px 10px 10px;
+    /*color: #e0c0e1;*/
+    text-align: center;
+
+    /*border-style: solid;*/
+    /*border-width: 0.5px;*/
+    /*border-color: #3D405B;*/
+
+    background-color: white;
+    /*border-radius: 5px;*/
+    /*box-shadow: 0 3px 8px rgba(0,0,0,0.25);*/
+
+}
+/*tabele */
+#res-container{
+  max-width:1000px;
+  margin:0 auto;
+
+  box-shadow: 0 14px 28px rgba(224,192,225,0.25), 0 10px 10px rgba(224,192,225,0.22);
+  background-color: #fff;
+
+  margin-top:20px;
+  margin-bottom:100px;
+
+  justify-content: space-around;
+  align-items: flex-start;
+    text-align: center;
+}
+
+/*profile css*/
+.main_heading {
+    color: #048c8c;
+    /*color: #ADDFAD;*/
+    /*font-family: 'Montserrat', sans-serif;*/
+    text-align: center;
+    font-size: 40px;
+    /*font-weight: bold;*/
+    padding-top: 10px;
+}
