--- a/templates/product-details.html
+++ b/templates/product-details.html
@@ -1,10 +1,101 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% include 'base.html' %}
+{% load static %}
+{% block content %}
 
-</body>
-</html>
+  <h1 id="titl1" style="margin-bottom: 1em"> {{ product.product_name }} </h1>
+   <div class="container">
+      <div class="row">
+        <div class="col-4 prod_desc" >
+            <p style="margin-top: 200px"> {{ product.materials }}</p>
+        </div>
+        <div class="col-8">
+            <div class="">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+              </ol>
+              <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img class="d-block w-100" src="{{ product.product_image.url }}" alt="First image">
+                      </div>
+                  {% for img in images %}
+                      <div class="carousel-item">
+                        <img class="d-block w-100" src="{{ img.image.url }}" alt="Product image">
+                      </div>
+                  {% endfor %}
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+            </div>
+        </div>
+      </div>
+    </div>
+
+    <hr>
+    <h1 id="titl1" style="margin-top: 1em; margin-bottom: 1em"> Available at stores</h1>
+    <form method="GET" class="form_div" style="margin-left: 30em;">
+    {{my_filter.form}}
+    <button type="submit" id="submit" class="btn search_btn" style="position: relative;background-color: #e0c0e1">Search</button>
+    </form>
+    <br>
+    <div id="res-container">
+    <div class ="card card-body">
+        <table class="table table-sm">
+            <tr>
+                <th><i class="fas fa-store"></i> Store name</th>
+                <th><i class="fas fa-boxes"></i> Number of available items</th>
+                <th><i class="fas fa-store-slash"></i> Online exclusive</th>
+                <th><i class="fas fa-money-bill-wave"></i> Price </th>
+                <th><i class="fas fa-wallet"></i> Currency</th>
+                <th></th>
+            </tr>
+            {% for store in stores %}
+            <tr>
+            <form method="POST">
+                    {% csrf_token %}
+                    <td>{{store.store_name}}</td>
+                    <td>{{store.number_of_available_items}}</td>
+                    <td>{{store.online_exclusive}}</td>
+                    <td id="price_{{ store.id }}"> {{ store.product.product_price }}</td>
+                    <td>
+                        <select id="currencies_{{ store.id }}" name="currencies" class="form-control">
+                            <option value={{ values.0 }}>{{ currencies.0}}</option>
+                            <option value={{ values.1 }}>{{ currencies.1}}</option>
+                            <option value={{ values.2 }}>{{ currencies.2}}</option>
+                        </select>
+                    </td>
+                    {% block javascript %}
+                        <script>
+                            $(document).ready(function () {
+                            $("#currencies_".concat({{ store.id }})).change(function(){
+                                var coef = parseFloat($("#currencies_".concat({{ store.id }})).val());
+                                var new_price = coef * parseFloat({{ store.product.product_price }});
+                                $("#price_".concat({{ store.id }})).html(new_price.toFixed(2));
+                            });
+                            });
+
+                        </script>
+                    {% endblock %}
+                    {% if store.online_exclusive == True %}
+                        <td><a class = "btn btn-sm btn-info" href = "#" style="background-color: #e0c0e1;border-color: #e0c0e1">Order</a></td>
+                    {% else %}
+                        <td></td>
+                {% endif %}
+            </form>
+            </tr>
+            {% endfor %}
+        </table>
+    </div>
+</div>
+
+{% endblock %}
