--- a/templates/products.html
+++ b/templates/products.html
@@ -15,7 +15,7 @@
 
                 <article class="col-12 col-md-6 tm-post">
                     <hr class="tm-hr-primary">
-                    <a href="#" class="effect-lily tm-post-link tm-pt-60">
+                    <a href="{% url 'product-details' product.id %}" class="effect-lily tm-post-link tm-pt-60">
                         <div class="tm-post-link-inner">
                             <img src="{{ product.product_image.url }}" alt="Product image" class="img-fluid">
                         </div>
