--- a/templates/pdf-template.html
+++ b/templates/pdf-template.html
@@ -96,7 +96,7 @@
 {#    </table>#}
 {#    <hr>#}
     <p><strong>Total: {{ order.price_of_order }} eur. </strong></p>
-    <h1 style="text-align: right"> Thank you for your order!</h1>
+    <h1 style="text-align: right"> Thanks for your order!</h1>
     <h1 style="text-align: right"> PANDORA </h1>
 </body>
 </html>
