--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,6 +7,7 @@
     color: #e0c0e1;
     font-weight: bold;
     margin-top: 50px;
+    margin-bottom: 0;
 }
 #pandora1{
     margin-left: 490px;
@@ -227,3 +228,13 @@ a:hover figcaption { color: #ffb3cb; }
     /*font-weight: bold;*/
     padding-top: 10px;
 }
+/*home stores*/
+.acc_div{
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 50px;
+    background-color: #ffb3cb;
+}
+/*#stores{*/
+/*    background-color: #ffb3cb;*/
+/*}*/
