CRUD for orders, charts

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,13 @@
     margin-top: 50px;
     margin-bottom: 0;
 }
+#titl2{
+    text-align: center;
+    color: #e0c0e1;
+    font-weight: bold;
+    margin-top: 50px;
+    margin-bottom: 0;
+}
 #pandora1{
     margin-left: 490px;
     margin-bottom: 20px;
